# great-stabbing

./: .gitignore  LICENSE  PROJECT_PLAN.md  README.md  ROADMAP.md  TECHNICAL_PLAN.md  UsersrotciAppDataLocalTempscb_root.json  pyproject.toml  wrangler.toml
.github/workflows/: adapter-annual.yml  adapter-monthly.yml  adapter-quarterly.yml  build-tiles.yml  ci.yml  deploy.yml  extraction-fetch.yml  source-health-check.yml
adapters/: _eurostat_homicide.py  _eurostat_supplement.py  _supplement_runners.py
adapters/at/: adapter.py  category_map.yaml  region_map.csv
adapters/be/: adapter.py  region_map.csv
adapters/ch/: adapter.py  region_map.csv
adapters/common/: __init__.py  base.py  http.py  nuts.py  schema.py  validate.py
adapters/de/: adapter.py  category_map.yaml  region_map.csv
adapters/dk/: adapter.py  category_map.yaml  region_map.csv
adapters/es/: adapter.py  category_map.yaml  region_map.csv
adapters/fr/: adapter.py  category_map.yaml  region_map.csv
adapters/ie/: adapter.py  category_map.yaml  region_map.csv
docs/: adding-a-country.md  cloudflare-deploy.md  methodology.md
extraction/: confidence.py  dedupe.py  filter.py  geocode.py  geocode_cache.csv  pipeline.py  schema.py
scripts/: add_country_populations.py  add_es_populations.py  add_it_populations.py  add_uk_to_nuts.py  build_map_geojson.py  build_site_data.py  build_tiles.sh  check_sources.py  refresh_nuts_lookup.py  run_adapter.py  run_all.py
site/: astro.config.mjs  package-lock.json  package.json  tailwind.config.mjs  tsconfig.json
tests/: test_smoke.py
(+60 files in other folders)
