[project]
name = "great-stabbing"
version = "0.0.1"
description = "Europe-wide map and dashboard of violent crime. Inspired by hoyodecrimen.com."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "victor-velazquez-ai" }]

dependencies = [
    "pandas>=2.2",
    "pyarrow>=18.0",
    "duckdb>=1.1",
    "requests>=2.32",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "pyyaml>=6.0",
    "pandera>=0.21",
    "pydantic>=2.9",
    "python-dateutil>=2.9",
    "tenacity>=9.0",
    "geopy>=2.4",
    "rich>=13.9",
    "typer>=0.15",
    "feedparser>=6.0",
    "langdetect>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7",
    "mypy>=1.13",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "types-requests",
    "types-pyyaml",
]

[project.scripts]
gs = "great_stabbing.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["adapters", "extraction"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "C4", "SIM", "RUF"]
ignore = ["E501"]  # ruff format handles line length

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
